--- a/form.html
+++ b/form.html
@@ -175,7 +175,8 @@
             required
           />
 
-          <button type="submit" onclick="attemptLogin()" id="login_btn">Login</button>
+          <!-- <button type="submit"  id="login_btn" href="dashboard.html" onclick="preventDefault()">Login</button> -->
+          <a type="submit"  id="login_btn" href="dashboard.html" onclick="preventDefault()">Login</a>
           <label>
             <input type="checkbox" checked="checked" name="remember" /> Remember
             me
