--- a/dashboard.html
+++ b/dashboard.html
@@ -58,7 +58,7 @@
                <h3>Notifications</h3>
                <span class="message-count">28</span>
             </a>
-            <a href="QUIZZ.1/home.html">
+            <a href="Games/game.html">
                <span class="material-symbols-outlined">sports_esports</span>
                <h3>Games</h3>
             </a>
