--- a/Games/QUIZZ.1/home.html
+++ b/Games/QUIZZ.1/home.html
@@ -49,8 +49,8 @@
                         <p class="white-text green">SELECT YOUR LEVEL</p>
                         <p class="center">
                             <a href="index.html" class="btn blue">EASY</a>
-                            <a href="quiz.html" class="btn blue" disabled>MEDIUM</a>
-                            <a href="quiz.html" class="btn blue" disabled>DIFFICULT</a>
+                            <a href="index_medium.html" class="btn blue">MEDIUM</a>
+                            <a href="index_difficult.html" class="btn blue">DIFFICULT</a>
 
                         </p>
                     </div>
