--- a/Games/QUIZZ.1/home.html
+++ b/Games/QUIZZ.1/home.html
@@ -60,8 +60,7 @@
                     </div>
 
                     <p class="center">
-                        <!-- <a href="quiz.html" class="btn blue">Lets start</a> -->
-                        <a href="../highscores.html" class="btn blue">High Scores</a>
+                        <a href="../game.html" class="btn blue">EXIT</a>
                     </p>
 
                 </form>
