--- a/Games/RPS/index.html
+++ b/Games/RPS/index.html
@@ -104,7 +104,11 @@
       </div>
     </section>
     <div id="guide">Refresh or reload page to restart</div>
-    <script src="script.js"></script>
+    
+<div class='demo_wrapper' onclick="game()">
+  <div class="container zoom_shrink"><div class="close_icon zoom_shrink"></div>
+</div>
   </body>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="main.js"></script>
 </html
