--- a/Games/game.html
+++ b/Games/game.html
@@ -42,10 +42,9 @@
         <div class="card-image3"></div>
         <div class="card-text">
           <span class="date">Let's Start !!</span>
-          <h2>Game Three</h2>
+          <h2>Tower of Hanoi</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur, Ducimus, repudiandae
-            temporibus omnis illum maxime quod deserunt eligendi dolor
+            The puzzle was invented by the French mathematician Édouard Lucas, first presented in 1883 as a game discovered by "N. Claus (de Siam)" (an anagram of "Lucas d'Amiens") and later published as a booklet in 1889 and in a posthumously-published volume of Lucas'.
           </p>
         </div>
       </div>
@@ -97,7 +96,7 @@
         // Add event listener to the card container
         container3.addEventListener("click", function () {
           // Redirect to another page
-          window.location.href = "index.html";
+          window.location.href = "Tower of Hanoi/index1.html";
         });
       });
     </script>
