--- a/dashboard.html
+++ b/dashboard.html
@@ -360,6 +360,152 @@
 
    </div>
 
+      <!-- Start Contact Us Form -->
+   <section class="section-contact pt-5 w-100 absolute">
+      <div class="bubbles">
+         <div class="bubble"></div>
+         <div class="bubble"></div>
+         <div class="bubble"></div>
+         <div class="bubble"></div>
+         <div class="bubble"></div>
+         <div class="bubble"></div>
+         <div class="bubble"></div>
+         <div class="bubble"></div>
+         <div class="bubble"></div>
+         <div class="bubble"></div>
+      </div>
+
+      <h2>Contact Us</h2>
+      <div class="contact">
+         <div class="left-contact">
+            <div class="contact-details">
+               <div class="address mb-5">
+                  <a href=""><i class="fa-sharp fa-solid fa-location-dot px-5"></i></a>
+                  <div class="info pt-2">
+                     <h4 class="text-dark">Address</h4>
+                     <p>Integral Girls Hostel, Lucknow - 226026</p>
+                  </div>
+               </div>
+               <div class="email mb-5">
+                  <a href=""><i class="fa-solid fa-envelope"></i></a>
+                  <div class="info pt-2">
+                     <h4 class="text-dark">Email</h4>
+                     <p class="">test@example.com</p>
+                  </div>
+               </div>
+               <div class="phone mb-5">
+                  <a href=""><i class="fa-solid fa-phone-volume"></i></a>
+                  <div class="info pt-2">
+                     <h4 class="text-dark">Phone</h4>
+                     <p>9876543210</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="right-contact">
+            <form class="form-container" action="https://api.web3forms.com/submit" method="POST" class="contact-form">
+               <div class="contact-title">
+                  <h2>Get In Touch</h2>
+               </div>
+
+               <input type="hidden" name="access_key" value="29e17d46-429b-47b1-a407-f3481c0c4081">
+               <input type="text" name="name" placeholder="Your Full Name" class="contact-inputs">
+               <input type="text" name="email" placeholder="Your Email" class="contact-inputs">
+               <input type="text" name="subject" placeholder="Subject" class="contact-inputs">
+               <textarea name="message" placeholder="Your Message" class="contact-inputs" id="" cols="30"
+                  rows="10"></textarea>
+
+               <button class="w-50 text-center" type="submit">Send Message</button>
+            </form>
+         </div>
+      </div>
+   </section>
+   <!-- End Contact Us Form -->
+   </div>
+
+   <!-- Start Footer Section -->
+
+   <footer class="new_footer_area bg_color pt-5">
+      <h2 class="pt-5 fs-1 text-center">NO QUESTION GOES UNANSWERED</h2>
+      <div class="users">
+         <div class="user">
+            <img src="./images/user-3.jpg" alt="">
+         </div>
+         <div class="user">
+            <img src="./images/user-1" alt="">
+         </div>
+         <div class="user">
+            <img src="./images/user-2.jpg" alt="">
+         </div>
+      </div>
+
+      <p class="text-center mt-5 pt-3 fs-5 text-dark">If yoy have any questions, <a class="text-primary" href="#">we are
+            just an email away.</a></p>
+      <p class="text-center pt-2 fs-5 text-dark">We take your success seriously, you will always get a speedy reply from
+         a real person during business hours.</p>
+      <div class="new_footer_top">
+         <div class="container">
+            <div class="row">
+               <div class="col-lg-4 col-md-6">
+                  <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s"
+                     style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+                     <h3 class="f-title f_600 t_color f_size_18">About Hive Mind</h3>
+                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maiores natus dicta beatae modi,
+                        voluptates provident optio eius odio delectus esse dignissimos dolorem consequatur? Reiciendis
+                        hic vitae dolorem atque et! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Voluptatibus, quas!</p>
+                  </div>
+               </div>
+               <div class="col-lg-3 col-md-6">
+                  <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s"
+                     style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
+                     <h3 class="f-title f_600 t_color f_size_18">Help</h3>
+                     <ul class="list-unstyled f_list fs-5">
+                        <li><a href="#">Term &amp; conditions</a></li>
+                        <li><a href="#">Documentation</a></li>
+                        <li><a href="#">Reporting</a></li>
+                        <li><a href="#">Support Policy</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">FAQ</a></li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="col-lg-5 col-md-6">
+                  <div class="f_widget social-widget pl_70 wow fadeInLeft" data-wow-delay="0.8s"
+                     style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
+                     <h3 class="f-title f_600 t_color f_size_18">Team Solutions</h3>
+                     <div class="f_social_icon">
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-facebook"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-linkedin"></a>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="footer-logo">
+            <img src="images/logo1.png" alt="">
+            <!-- <h2>HIVE <span class="danger">MIND</span></h2> -->
+         </div>
+         <hr>
+         <div class="footer_bottom">
+            <div class="container">
+               <div class="row align-items-center">
+                  <div class="col-lg-12 col-md-3">
+                     <p class="mb-0 f_400">©Hive Mind Inc.. 2024 All rights reserved.</p>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="footer_bg">
+            <div class="footer_bg_one"></div>
+            <div class="footer_bg_two"></div>
+         </div>
+      </div>
+
+   </footer>
+
    <script src="/dashboard.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
