--- a/dashboard.html
+++ b/dashboard.html
@@ -39,7 +39,7 @@
             </a>
             <a href="todo.html">
                <span class="material-symbols-outlined">fact_check</span>
-               <h3>To-Do</h3>
+               <h3>MY TASK</h3>
             </a>
             <a href="#">
                <span class="material-symbols-outlined">calendar_clock</span>
@@ -60,15 +60,15 @@
             </a>
             <a href="Games/game.html">
                <span class="material-symbols-outlined">sports_esports</span>
-               <h3>Games</h3>
+               <h3>GAMES</h3>
             </a>
             <a href="#">
                <span class="material-icons-sharp">settings</span>
                <h3>Settings</h3>
             </a>
-            <a href="#">
+            <a href="form.html">
                <span class="material-icons-sharp">logout</span>
-               <h3>Logout</h3>
+               <h3>LOGOUT</h3>
             </a>
          </div>
 
