--- a/form.html
+++ b/form.html
@@ -7,7 +7,9 @@
   <body>
     <div id="main">
       <img src="../images/logo1.png" alt="Avatar1" class="avatar1" />
-      <h2 style="color:#ffa406">Hive Mind brings the team together wherever you are</h2>
+      <h2 style="color: #ffa406">
+        Hive Mind brings the team together wherever you are
+      </h2>
       <br /><br />
       <button
         onclick="document.getElementById('id01').style.display='block'"
@@ -15,7 +17,7 @@
       >
         Login to Hive Mind
       </button>
-      <h3 style="margin-left: 40%;color: #ffa406;font-size: 1.5em;">Or</h3>
+      <h3 style="margin-left: 40%; color: #ffa406; font-size: 1.5em">Or</h3>
       <button
         onClick="document.getElementById('id02').style.display='block'"
         style="width: 90%"
@@ -176,7 +178,13 @@
           />
 
           <!-- <button type="submit"  id="login_btn" href="dashboard.html" onclick="preventDefault()">Login</button> -->
-          <a type="submit"  id="login_btn" href="dashboard.html" onclick="preventDefault()">Login</a>
+          <a
+            type="submit"
+            id="login_btn"
+            href="dashboard.html"
+            onclick="preventDefault()"
+            >Login</a
+          >
           <label>
             <input type="checkbox" checked="checked" name="remember" /> Remember
             me
