--- a/Games/game.html
+++ b/Games/game.html
@@ -96,7 +96,7 @@
         // Add event listener to the card container
         container3.addEventListener("click", function () {
           // Redirect to another page
-          window.location.href = "Tower of Hanoi/index1.html";
+          window.location.href = "Tower of Hanoi/index.html";
         });
       });
     </script>
