--- a/Games/Tower of Hanoi/instructions.html
+++ b/Games/Tower of Hanoi/instructions.html
@@ -28,7 +28,7 @@
         // Function to redirect to another page
   function play() {
     // Change the URL to the desired page
-    window.location.href = "index.html";
+    window.location.href = "home.html";
   }
     </script>
   </body>
