--- a/dashboard.html
+++ b/dashboard.html
@@ -6,22 +6,28 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Responsive Dashboard</title>
-   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
    <link rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
    <link rel="stylesheet" href="dashboard.css">
+   <link rel="stylesheet" href="./hiveMind_Bot/bot-Style.css">
 </head>
 
 <body>
-   <div class="container">
+   <div class="container-dash w-100">
       <aside>
          <div class="top-icon">
             <div class="logo">
-               <img src="images/logo.png" alt="">
-               <h2>WORK <span class="danger">STREAMLINE</span></h2>
+               <img src="images/logo1.png" alt="">
+               <!-- <h2>WORK <span class="danger">STREAMLINE</span></h2> -->
             </div>
             <div class="close" id="close-btn">
                <span class="material-icons-sharp">close</span>
@@ -39,7 +45,7 @@
             </a>
             <a href="todo.html">
                <span class="material-symbols-outlined">fact_check</span>
-               <h3>MY TASK</h3>
+               <h3>To-Do</h3>
             </a>
             <a href="#">
                <span class="material-symbols-outlined">calendar_clock</span>
@@ -60,15 +66,15 @@
             </a>
             <a href="Games/game.html">
                <span class="material-symbols-outlined">sports_esports</span>
-               <h3>GAMES</h3>
+               <h3>Games</h3>
             </a>
             <a href="#">
                <span class="material-icons-sharp">settings</span>
                <h3>Settings</h3>
             </a>
-            <a href="form.html">
+            <a href="#">
                <span class="material-icons-sharp">logout</span>
-               <h3>LOGOUT</h3>
+               <h3>Logout</h3>
             </a>
          </div>
 
@@ -126,6 +132,60 @@
          <!-- PROJECT DASHBOARD -->
          <div class="project-container">
 
+            <!-- *** Ai ChatBot *** -->
+            <div class="chat-bar-collapsible"
+               style="display: flex; flex-direction: column; justify-content: flex-end; align-items: flex-end;">
+               <button id="chat-button" type="button" class="collapsible">
+                  <div style="display: flex; align-items: center; gap: 1.4rem;">
+                     <img src="./hiveMind_Bot/bot-img.png" alt="" style="width: 4rem; height: 4rem;">
+                     <h3 style="font-size: 2rem; font-weight: 700; color: #fff;">Chat with us!</h3>
+
+                  </div>
+               </button>
+
+               <div class="content">
+                  <div class="full-chat-block">
+                     <!-- Message Container -->
+                     <div class="outer-container">
+                        <div class="chat-container">
+                           <!-- Messages -->
+                           <div id="chatbox">
+                              <h5 id="chat-timestamp"></h5>
+                              <p id="botStarterMessage" class="botText"><span>Loading...</span></p>
+
+
+                              <div id="chat-bar-bottom" style="height: 1rem;">
+                                 <p></p>
+                              </div>
+
+
+                           </div>
+                           <!-- User input box -->
+
+                           <div class="chat-bar-input-block">
+                              <div id="userInput">
+                                 <input id="textInput" class="input-box" type="text" name="msg"
+                                    placeholder="How can i assist you?">
+                                 <p></p>
+                              </div>
+
+
+                              <div class="chat-bar-icons">
+                                 <i id="chat-icon" style="color: crimson; font-size: 1.6rem;" class="fa fa-fw fa-heart"
+                                    onclick="heartButton()"></i>
+                                 <i id="chat-icon" style="color: #6c3bff;" class="fa fa-fw fa-send"
+                                    onclick="sendButton()"></i>
+                              </div>
+                           </div>
+                        </div>
+
+                     </div>
+                  </div>
+
+               </div>
+            </div>
+            <!-- +++++++++++++++++++++++++++++++++ -->
+
             <div class="left-project">
 
                <div class="project-section">
@@ -139,7 +199,8 @@
                         <div class="project-name maincontainer">
                            <div class="back">
                               <h3>Project Management Tool</h3>
-                              <p>It seeks to create a robust platform for organizing, creating, and analyzing content, streamlining the process of managing posts.</p>
+                              <p>It seeks to create a robust platform for organizing, creating, and analyzing content,
+                                 streamlining the process of managing posts.</p>
                               <a href="https://jasmine-haque.github.io/BHARAT-INTERN/">View Project</a>
                            </div>
                            <div class="front">
@@ -152,7 +213,8 @@
                         <div class="project-name maincontainer">
                            <div class="back">
                               <h3>Quotes Generator project</h3>
-                              <p>To create a dynamic and inspiring platform that randomly generates thought-provoking quotes, offering users a daily dose of motivation and wisdom.</p>
+                              <p>To create a dynamic and inspiring platform that randomly generates thought-provoking
+                                 quotes, offering users a daily dose of motivation and wisdom.</p>
                               <a href="https://moiedkhan877.github.io/task3-codealpha/">View Project</a>
                            </div>
                            <div class="front">
@@ -165,7 +227,9 @@
                         <div class="project-name maincontainer">
                            <div class="back">
                               <h3>My Restaurant Application</h3>
-                              <p>It is a user-friendly platform that showcases a diverse range of recipes, and gastronomic experiences, providing a delightful online destination for food enthusiasts.</p>
+                              <p>It is a user-friendly platform that showcases a diverse range of recipes, and
+                                 gastronomic experiences, providing a delightful online destination for food
+                                 enthusiasts.</p>
                               <a href="https://deploy-preview-1--strong-queijadas-7534a5.netlify.app/">View Project</a>
                            </div>
                            <div class="front">
@@ -189,7 +253,9 @@
                         <div class="project-name maincontainer">
                            <div class="back">
                               <h3>Todo List</h3>
-                              <p>It focus on developing a streamlined & task management application, empower users to efficiently organize, prioritize, & track daily activities for enhanced productivity.</p>
+                              <p>It focus on developing a streamlined & task management application, empower users to
+                                 efficiently organize, prioritize, & track daily activities for enhanced productivity.
+                              </p>
                               <a href="https://munendra10.github.io/CodeAlpha-to-do-list/">View Project</a>
                            </div>
                            <div class="front">
@@ -202,7 +268,8 @@
                         <div class="project-name maincontainer">
                            <div class="back">
                               <h3>Resume Builder</h3>
-                              <p>It enabling users to effortlessly craft professional resumes by providing customizable templates, & a user-friendly interface for effective career representation.</p>
+                              <p>It enabling users to effortlessly craft professional resumes by providing customizable
+                                 templates, & a user-friendly interface for effective career representation.</p>
                               <a href="https://shantanu-121.github.io/CodeAlpha_Resume_Builder/">View Project</a>
                            </div>
                            <div class="front">
@@ -215,7 +282,9 @@
                         <div class="project-name maincontainer">
                            <div class="back">
                               <h3>Tic-Tac-Toe Game</h3>
-                              <p>To implement a classic yet engaging game application, offering users an interactive and strategic experience through a user-friendly interface that allows players to compete.</p>
+                              <p>To implement a classic yet engaging game application, offering users an interactive and
+                                 strategic experience through a user-friendly interface that allows players to compete.
+                              </p>
                               <a href="https://nipunika1721.github.io/Codecasa-Task2/">View Project</a>
                            </div>
                            <div class="front">
@@ -239,7 +308,8 @@
                         <div class="project-name maincontainer">
                            <div class="back">
                               <h3>Food Application</h3>
-                              <p>It providing users with a seamless & personalized experience for discovering, ordering, & enjoying a diverse range of culinary delights from various restaurants.</p>
+                              <p>It providing users with a seamless & personalized experience for discovering, ordering,
+                                 & enjoying a diverse range of culinary delights from various restaurants.</p>
                               <a href="https://ombhagwat2401.github.io/food-app/">View Project</a>
                            </div>
                            <div class="front">
@@ -252,7 +322,8 @@
                         <div class="project-name maincontainer">
                            <div class="back">
                               <h3>Traveling Agency Portfolio</h3>
-                              <p>To showcase a captivating & informative platform, offering potential clients a visually appealing glimpse into agency's expertise, services, & curated travel experiences.</p>
+                              <p>To showcase a captivating & informative platform, offering potential clients a visually
+                                 appealing glimpse into agency's expertise, services, & curated travel experiences.</p>
                               <a href="https://anshuvairagade.github.io/Travelling-Agency-landing-Page/">View
                                  Project</a>
                            </div>
@@ -266,7 +337,8 @@
                         <div class="project-name maincontainer">
                            <div class="back">
                               <h3>Weather Application</h3>
-                              <p>To provide an accurate and user-friendly platform that offers real-time weather data and deep insights so that users may make decisions based on the present weather.</p>
+                              <p>To provide an accurate and user-friendly platform that offers real-time weather data
+                                 and deep insights so that users may make decisions based on the present weather.</p>
                               <a href="https://jagathpj.github.io/weather-app/">View Project</a>
                            </div>
                            <div class="front">
@@ -360,7 +432,7 @@
 
    </div>
 
-      <!-- Start Contact Us Form -->
+   <!-- Start Contact Us Form -->
    <section class="section-contact pt-5 w-100 absolute">
       <div class="bubbles">
          <div class="bubble"></div>
@@ -408,7 +480,7 @@
                   <h2>Get In Touch</h2>
                </div>
 
-               <input type="hidden" name="access_key" value="29e17d46-429b-47b1-a407-f3481c0c4081">
+               <input type="hidden" name="access_key" value="66cc9262-53af-4b3b-80f2-eb4825520a1a">
                <input type="text" name="name" placeholder="Your Full Name" class="contact-inputs">
                <input type="text" name="email" placeholder="Your Email" class="contact-inputs">
                <input type="text" name="subject" placeholder="Subject" class="contact-inputs">
@@ -432,7 +504,7 @@
             <img src="./images/user-3.jpg" alt="">
          </div>
          <div class="user">
-            <img src="./images/user-1" alt="">
+            <img src="./images/user-1.png" alt="">
          </div>
          <div class="user">
             <img src="./images/user-2.jpg" alt="">
@@ -450,10 +522,7 @@
                   <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s"
                      style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
                      <h3 class="f-title f_600 t_color f_size_18">About Hive Mind</h3>
-                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo maiores natus dicta beatae modi,
-                        voluptates provident optio eius odio delectus esse dignissimos dolorem consequatur? Reiciendis
-                        hic vitae dolorem atque et! Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Voluptatibus, quas!</p>
+                     <p>A Hive Mind is an online platform for streamlined task and project management. Users can create, categorize, and assign tasks with due dates and priorities. It integrates with calendar apps for efficient scheduling, offers robust reporting features, and ensures security through access control. Its responsive design enables accessibility on smartphones and tablets.</p>
                   </div>
                </div>
                <div class="col-lg-3 col-md-6">
@@ -506,10 +575,16 @@
 
    </footer>
 
-   <script src="/dashboard.js"></script>
+
+   <script src="./dashboard.js"></script>
+   <script src="./hiveMind_Bot/chat.js"></script>
+   <script src="./hiveMind_Bot/responses.js"></script>
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"></script>
+
 </body>
 
 </html>
