--- a/dashboard.html
+++ b/dashboard.html
@@ -45,13 +45,13 @@
             </a>
             <a href="todo.html">
                <span class="material-symbols-outlined">fact_check</span>
-               <h3>To-Do</h3>
+               <h3>Task</h3>
             </a>
-            <a href="#">
+            <a href="calender.html">
                <span class="material-symbols-outlined">calendar_clock</span>
                <h3>Calender</h3>
             </a>
-            <a href="#">
+            <a href="team/index.html">
                <span class="material-symbols-outlined">diversity_3</span>
                <h3>Teams</h3>
             </a>
@@ -72,7 +72,7 @@
                <span class="material-icons-sharp">settings</span>
                <h3>Settings</h3>
             </a>
-            <a href="#">
+            <a href="form.html">
                <span class="material-icons-sharp">logout</span>
                <h3>Logout</h3>
             </a>
